# c--basics

./: .gitignore  CMakeLists.txt  Dockerfile  main  main.cpp
includes/: add.cpp  add.h
src/: add.cpp  main  main.cpp  player.cpp  player.h  super_player.h
